--- a/Oblig1/breast_cancer.ipynb
+++ b/Oblig1/breast_cancer.ipynb
@@ -1908,8 +1908,7 @@
     "\n",
     "Når vi også sammenligner de endelige test resultatene mellom DecisionTreeClassifier og GaussianNB, så ser vi at GaussianNB har like eller bedre resultater for alle målene bortsett fra for precision hvor DecisionTreeClassifier ligger et knep forann, men hvis vi ser på standard avikene så ser vi at GaussianNB har mindre standard avik for både precision og recall enn DecisionTreeClassifier og derfor vil ha mindre variasjon i disse verdiene ved flere kjøring av modellen. Jeg har valgt å bruke looping ved kjøring av modellen slik at jeg har fått resultater med mindre variasjonn og standard avik for å kunne ha et mål på den forvented variasjonen. Jeg ladet på å bruke 50 runder for hver modell, men det er forsatt betydelig variasjon pga. den randomiserte oppdeling av datasetet ved oppdeling til traning, validation og test. Ved flere kjøring vil derfor resulatene kunne variere betydelig.\n",
     "\n",
-    "Totaltsett lader jeg på at GaussianNB vil være en bedre modelle for disse dataene, både på grunn av litt bedre resultater totaltset, men også pga mindre risiko for overfiting av modellen ved treningen.\n",
-    "Når vi ser på datatypene som featuresene i datasetet innehold er dette ikke så overraskende da alle disse virker å være normalfordelte tallverdier som vil passe veldig godt til bruk i GaussianNB modellen."
+    "Totaltsett lader jeg på at GaussianNB vil være en bedre modelle for disse dataene, både på grunn av litt bedre resultater totaltset, men også pga mindre risiko for overfiting av modellen ved treningen."
    ]
   },
   {
