--- a/Oblig1/realestate.ipynb
+++ b/Oblig1/realestate.ipynb
@@ -1412,7 +1412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 78,
    "id": "1f14b4a3",
    "metadata": {},
    "outputs": [
@@ -1421,19 +1421,19 @@
      "output_type": "stream",
      "text": [
       "Training results:\n",
-      "Mean absolute error: 6.00 +- 0.32\n",
-      "Mean squared error: 72.48 +- 14.89\n",
-      "R2 score: 0.60 +- 0.05\n",
+      "Mean absolute error: 6.12 +- 0.36\n",
+      "Mean squared error: 77.36 +- 15.33\n",
+      "R2 score: 0.58 +- 0.05\n",
       "************************\n",
       "Validation results:\n",
-      "Mean absolute error: 6.29 +- 0.50\n",
-      "Mean squared error: 77.48 +- 24.44\n",
-      "R2 score: 0.58 +- 0.08\n"
+      "Mean absolute error: 6.38 +- 0.58\n",
+      "Mean squared error: 83.12 +- 28.42\n",
+      "R2 score: 0.56 +- 0.09\n"
      ]
     }
    ],
    "source": [
-    "lr1 = LinearRegression(tol=1e-4)\n",
+    "lr1 = LinearRegression(tol=1e-6)\n",
     "validate(lr1, 50)"
    ]
   },
@@ -1442,12 +1442,16 @@
    "id": "5d25e1a1",
    "metadata": {},
    "source": [
-    "Igjen som for alle de andre modellene kjører vi først en baseline test av modellen slik at vi har noe å sammenligne med ut ifra. Som vi ser av resultatene for denne baseline kjøringen så er det ikke store forskjeller mellom training og validation delene av resultatene og det ser dermed ut som modellen ikke har problemer med betydelig overfiting mot traning delen av datasetet. "
+    "Igjen som for alle de andre modellene kjører vi først en baseline test av modellen slik at vi har noe å sammenligne med ut ifra. Som vi ser av resultatene for denne baseline kjøringen så er det ikke store forskjeller mellom training og validation delene av resultatene og det ser dermed ut som modellen ikke har problemer med betydelig overfiting mot traning delen av datasetet. \n",
+    "\n",
+    "I forhold til tuning parameter for denne modellen så er tol som i utgangspunktet er mulig å bruke. Dette er en instilling for tolleranse verdien for presisjonen til modellen [6].\n",
+    "\n",
+    "[6] (tol): \"https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LinearRegression.html\", lest 21.09.25"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 77,
    "id": "73925078",
    "metadata": {},
    "outputs": [
@@ -1456,13 +1460,13 @@
      "output_type": "stream",
      "text": [
       "Training results:\n",
-      "Mean absolute error: 6.14 +- 0.41\n",
-      "Mean squared error: 79.36 +- 16.31\n",
-      "R2 score: 0.58 +- 0.05\n",
+      "Mean absolute error: 6.12 +- 0.39\n",
+      "Mean squared error: 76.92 +- 15.58\n",
+      "R2 score: 0.59 +- 0.06\n",
       "************************\n",
       "Validation results:\n",
-      "Mean absolute error: 6.29 +- 0.61\n",
-      "Mean squared error: 79.47 +- 28.07\n",
+      "Mean absolute error: 6.25 +- 0.49\n",
+      "Mean squared error: 76.80 +- 24.52\n",
       "R2 score: 0.57 +- 0.08\n"
      ]
     }
@@ -1474,7 +1478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 76,
    "id": "2155fcf6",
    "metadata": {},
    "outputs": [
@@ -1483,14 +1487,14 @@
      "output_type": "stream",
      "text": [
       "Training results:\n",
-      "Mean absolute error: 6.03 +- 0.34\n",
-      "Mean squared error: 72.53 +- 15.17\n",
-      "R2 score: 0.60 +- 0.05\n",
+      "Mean absolute error: 6.15 +- 0.34\n",
+      "Mean squared error: 76.14 +- 15.62\n",
+      "R2 score: 0.59 +- 0.05\n",
       "************************\n",
       "Validation results:\n",
-      "Mean absolute error: 6.43 +- 0.49\n",
-      "Mean squared error: 87.09 +- 27.28\n",
-      "R2 score: 0.54 +- 0.08\n"
+      "Mean absolute error: 6.32 +- 0.53\n",
+      "Mean squared error: 83.22 +- 27.60\n",
+      "R2 score: 0.56 +- 0.09\n"
      ]
     }
    ],
@@ -1501,7 +1505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 75,
    "id": "bd0ab8e5",
    "metadata": {},
    "outputs": [
@@ -1510,14 +1514,14 @@
      "output_type": "stream",
      "text": [
       "Training results:\n",
-      "Mean absolute error: 6.15 +- 0.30\n",
-      "Mean squared error: 76.38 +- 14.51\n",
-      "R2 score: 0.59 +- 0.05\n",
+      "Mean absolute error: 6.03 +- 0.38\n",
+      "Mean squared error: 74.06 +- 14.61\n",
+      "R2 score: 0.60 +- 0.05\n",
       "************************\n",
       "Validation results:\n",
-      "Mean absolute error: 6.16 +- 0.57\n",
-      "Mean squared error: 78.04 +- 28.63\n",
-      "R2 score: 0.58 +- 0.09\n"
+      "Mean absolute error: 6.41 +- 0.61\n",
+      "Mean squared error: 84.86 +- 27.67\n",
+      "R2 score: 0.55 +- 0.08\n"
      ]
     }
    ],
@@ -1528,7 +1532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 73,
    "id": "23ae8654",
    "metadata": {},
    "outputs": [
@@ -1537,25 +1541,25 @@
      "output_type": "stream",
      "text": [
       "Training results:\n",
-      "Mean absolute error: 6.08 +- 0.38\n",
-      "Mean squared error: 74.00 +- 15.32\n",
-      "R2 score: 0.60 +- 0.05\n",
+      "Mean absolute error: 6.16 +- 0.34\n",
+      "Mean squared error: 79.59 +- 12.82\n",
+      "R2 score: 0.58 +- 0.04\n",
       "************************\n",
       "Validation results:\n",
-      "Mean absolute error: 6.23 +- 0.69\n",
-      "Mean squared error: 82.40 +- 31.84\n",
-      "R2 score: 0.56 +- 0.09\n"
+      "Mean absolute error: 6.24 +- 0.45\n",
+      "Mean squared error: 74.78 +- 19.75\n",
+      "R2 score: 0.58 +- 0.06\n"
      ]
     }
    ],
    "source": [
-    "lr5 = LinearRegression(tol=1e-5)\n",
+    "lr5 = LinearRegression(tol=1e-4)\n",
     "validate(lr5, 50)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 72,
    "id": "028da915",
    "metadata": {},
    "outputs": [
@@ -1564,13 +1568,13 @@
      "output_type": "stream",
      "text": [
       "Training results:\n",
-      "Mean absolute error: 6.09 +- 0.34\n",
-      "Mean squared error: 75.70 +- 15.81\n",
-      "R2 score: 0.59 +- 0.05\n",
+      "Mean absolute error: 6.09 +- 0.38\n",
+      "Mean squared error: 76.27 +- 14.51\n",
+      "R2 score: 0.60 +- 0.04\n",
       "************************\n",
       "Validation results:\n",
-      "Mean absolute error: 6.29 +- 0.52\n",
-      "Mean squared error: 82.58 +- 27.00\n",
+      "Mean absolute error: 6.33 +- 0.51\n",
+      "Mean squared error: 79.66 +- 24.65\n",
       "R2 score: 0.56 +- 0.07\n"
      ]
     }
@@ -1582,7 +1586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 74,
    "id": "ee0aefff",
    "metadata": {},
    "outputs": [
@@ -1591,14 +1595,14 @@
      "output_type": "stream",
      "text": [
       "Training results:\n",
-      "Mean absolute error: 6.09 +- 0.34\n",
-      "Mean squared error: 74.50 +- 14.74\n",
-      "R2 score: 0.59 +- 0.05\n",
+      "Mean absolute error: 6.20 +- 0.32\n",
+      "Mean squared error: 78.08 +- 14.17\n",
+      "R2 score: 0.58 +- 0.05\n",
       "************************\n",
       "Validation results:\n",
-      "Mean absolute error: 6.43 +- 0.56\n",
-      "Mean squared error: 88.03 +- 29.04\n",
-      "R2 score: 0.54 +- 0.09\n"
+      "Mean absolute error: 6.32 +- 0.52\n",
+      "Mean squared error: 81.10 +- 26.66\n",
+      "R2 score: 0.56 +- 0.08\n"
      ]
     }
    ],
@@ -1608,8 +1612,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "146048a5",
+   "metadata": {},
+   "source": [
+    "Etter å ha gjennomført tuning av modellen så har jeg kommet fram til at lr5 gir meg de beste resultatene for modellen, så det er denne jeg kommer til å sammenligne opp mot DecisionTreeRegressor.\n",
+    "lr5 ble kjørt med følgende parameter. LinearRegression(tol=1e-4)\n",
+    "\n",
+    "Når vi sammenligner resultatene mellom lr1 og lr5 så ser vi at det ikke er de stor forskjellene, men det er liten forbedirng for lr5 kontra lr1 med høyere r2_score og lavere feilmengder. Det er bland annet en god reduksjon for mean_squeared_error som kan tyde på at lr5 bedre håndtere noen av utliggerene i datasetet, imidlertid er det viktig å ha i bakhode at dette datasettet ikke er veldig stort og dermed at oppdeling av datasete kan på virke dette selvom det er gjennomført flere kjøringer av oppdelingen og testingen.\n",
+    "\n",
+    "lr1 (baseline):\n",
+    "Training results:\n",
+    "Mean absolute error: 6.12 +- 0.36\n",
+    "Mean squared error: 77.36 +- 15.33\n",
+    "R2 score: 0.58 +- 0.05\n",
+    "************************\n",
+    "Validation results:\n",
+    "Mean absolute error: 6.38 +- 0.58\n",
+    "Mean squared error: 83.12 +- 28.42\n",
+    "R2 score: 0.56 +- 0.09\n",
+    "\n",
+    "lr5:\n",
+    "Training results:\n",
+    "Mean absolute error: 6.16 +- 0.34\n",
+    "Mean squared error: 79.59 +- 12.82\n",
+    "R2 score: 0.58 +- 0.04\n",
+    "************************\n",
+    "Validation results:\n",
+    "Mean absolute error: 6.24 +- 0.45\n",
+    "Mean squared error: 74.78 +- 19.75\n",
+    "R2 score: 0.58 +- 0.06"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 80,
    "id": "0ae65203",
    "metadata": {},
    "outputs": [
@@ -1619,37 +1656,37 @@
      "text": [
       "DecisionTreeRegressor:\n",
       "Training results:\n",
-      "Mean absolute error: 4.99 +- 0.30\n",
-      "Mean squared error: 53.17 +- 10.02\n",
-      "R2 score: 0.71 +- 0.03\n",
+      "Mean absolute error: 5.13 +- 0.30\n",
+      "Mean squared error: 57.81 +- 11.02\n",
+      "R2 score: 0.69 +- 0.04\n",
       "************************\n",
       "Validation results:\n",
-      "Mean absolute error: 5.84 +- 0.56\n",
-      "Mean squared error: 75.54 +- 25.76\n",
-      "R2 score: 0.61 +- 0.09\n",
+      "Mean absolute error: 5.65 +- 0.53\n",
+      "Mean squared error: 64.91 +- 20.71\n",
+      "R2 score: 0.64 +- 0.09\n",
       "************************\n",
       "Test results:\n",
-      "Mean absolute error: 5.76 +- 0.60\n",
-      "Mean squared error: 67.73 +- 23.16\n",
+      "Mean absolute error: 5.72 +- 0.54\n",
+      "Mean squared error: 66.95 +- 20.15\n",
       "R2 score: 0.62 +- 0.08\n",
       "\n",
       "***************\n",
       "\n",
       "LinearRegression:\n",
       "Training results:\n",
-      "Mean absolute error: 6.20 +- 0.35\n",
-      "Mean squared error: 77.61 +- 14.81\n",
-      "R2 score: 0.58 +- 0.05\n",
+      "Mean absolute error: 6.07 +- 0.33\n",
+      "Mean squared error: 75.49 +- 15.47\n",
+      "R2 score: 0.59 +- 0.05\n",
       "************************\n",
       "Validation results:\n",
-      "Mean absolute error: 6.21 +- 0.51\n",
-      "Mean squared error: 78.57 +- 23.80\n",
-      "R2 score: 0.58 +- 0.07\n",
+      "Mean absolute error: 6.36 +- 0.47\n",
+      "Mean squared error: 79.88 +- 24.63\n",
+      "R2 score: 0.57 +- 0.08\n",
       "************************\n",
       "Test results:\n",
-      "Mean absolute error: 6.36 +- 0.57\n",
-      "Mean squared error: 82.48 +- 27.02\n",
-      "R2 score: 0.56 +- 0.08\n"
+      "Mean absolute error: 6.18 +- 0.50\n",
+      "Mean squared error: 76.08 +- 22.61\n",
+      "R2 score: 0.58 +- 0.07\n"
      ]
     }
    ],
@@ -1659,8 +1696,20 @@
     "test(dt14, 50)\n",
     "print(\"\\n***************\\n\")\n",
     "print(\"LinearRegression:\")\n",
-    "validate(lr1, 50)\n",
-    "test(lr1, 50)"
+    "validate(lr5, 50)\n",
+    "test(lr5, 50)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de873144",
+   "metadata": {},
+   "source": [
+    "Når vi ser på forskjellene mellom resultatene for DecisionTreeRegressor og LinearRegression så ser vi at det er noe større forskjeller i resultatene mellom traning, validation og test delene for DecisionTreeRegressor kontra LinearRegression og hvis vi tar med baseline utgangspunktet så er denne forskjellen veldig stor. Dette tydlig gjøre at DecisionTreeRegressor er mye mer avhenging av riktig tuning for å kunne levere bra resultater.\n",
+    "\n",
+    "Når vi ser på forskjellene i de endelige test resultatene, så ser vi at DecisionTreeRegressor i dette tilfellet levere bedre resultater for alle målingen vi har brukt og det er heller ikke i standardaviket mellom modellene.\n",
+    "\n",
+    "For dette datasetet vil jeg si at DecisionTreeRegressor levere de beste resultatene, så i dette tilfellet er det denne modellen jeg ville ha brukt."
    ]
   }
  ],
