--- a/Oblig1/breast_cancer.ipynb
+++ b/Oblig1/breast_cancer.ipynb
@@ -817,9 +817,10 @@
    "id": "e6a790f4",
    "metadata": {},
    "source": [
-    "Før vi bruker datasete videre må vi konvertere verdiene i target kollonen slik at disse kan brukes med de verktøyene vi ønsker å bruke. Jeg har gjort dette ved å bruke numpy.where() fuksjonen til å konvertere verdien M til 1 og B til 0. Videre har jeg lagt disse verdiene i en ny kollone \"target\", slik at det letter kan brukes generelle funksjoner for splitting av datasetet. Siden verdiene for ID kollonen og den gamle kollonen for target verdiene ikke har noe videre nytteverdi, så dropper vi disse fra datasetet.\n",
+    "Før vi bruker datasete videre må vi konvertere verdiene i target kollonen slik at disse kan brukes med de verktøyene vi ønsker å bruke. Jeg har gjort dette ved å bruke numpy.where() fuksjonen til å konvertere verdien M til 1 og B til 0 [1]. Videre har jeg lagt disse verdiene i en ny kollone \"target\", slik at det letter kan brukes generelle funksjoner for splitting av datasetet. Siden verdiene for ID kollonen og den gamle kollonen for target verdiene ikke har noe videre nytteverdi, så dropper vi disse fra datasetet.\n",
     "\n",
-    "ref for np.where: https://www.geeksforgeeks.org/numpy/numpy-where-in-python/"
+    "ref:\n",
+    "[1]: Geeks for Geeks. (2025, 11. juli) numpy.where() in Python. Hentet 14. september 2025 fra \"https://www.geeksforgeeks.org/numpy/numpy-where-in-python/\""
    ]
   },
   {
@@ -1011,9 +1012,8 @@
     "For å vurdere modellen underveis i trenings og validerings prossesen har jeg valgt å bruke følgende målinger, accuracy, precision, recall, f1_score og roc_auc_score. Accuracy er et mål på hvor treffsiker modellen er og vurderes ved å sette antalle riktige prediksjoner opp mot det totale antallet av prediksjoner [2]. Precision er et mål hvor presis modellen er til å predikere \"positive\" utfall, dette vurderes ved å sett antall riktige \"positive\" prediksjoner opp mot totalen av \"positive\" prediksjoner [2]. Recall er et mål på hvor god modellen er til å finne alle \"positive\" utfall, dette vurderes ved å sette antall riktige \"positive\" prediksjoner opp mot totalen av antall riktig \"positive\" prediksjon pluss antallet falske \"negavtive\" prediksjoner [2]. f1_score er et mål på balansen mellom precision og recall og gir deg dermed et mål på hvor balanser modellen er på å være presis i sine prediksjoner, men samtidig oppdage/predikere så mange som mulig \"positive\" utfall [2]. roc er et mål på riktig \"positive\" prediksjon mot falske \"positive\" prediksjon og roc_auc_score gir deg en verdi for total arealet under roc curven til modellen. Et resultat på denne på 0.5 sier at modellen ikke er noe bedre enn randomisert tilfeldig tilfeller, mens 1.0 tilsier et perfekt resultat. roc_auc_score er derfor en god indikator på forholdet mellom riktige og falske positive prediksjoner [2] [3]. \n",
     "\n",
     "ref:\n",
-    "[2] (tuning parameter): \"https://scikit-learn.org/stable/modules/model_evaluation.html\", lest 20.09.25\n",
-    "\n",
-    "[3] (roc_auc): https://en.wikipedia.org/wiki/Receiver_operating_characteristic#Area_under_the_curve, lest 19.09.25"
+    "[2]: Scikit learn (u.å). Metrics and scoring: quantifying the quality of predictions. Hentet 20. september 2025 fra \"https://scikit-learn.org/stable/modules/model_evaluation.html\"\n",
+    "[3]: Wikipedia (u.å). Receiver operating characteristic. Hentet 19. september 2025 fra \"https://en.wikipedia.org/wiki/Receiver_operating_characteristic#Area_under_the_curve\""
    ]
   },
   {
@@ -1058,7 +1058,7 @@
     "For max_depth skjer dette ved å begrese maks dybden treet til modellen kan ha og derfor begresen muligheten modellen har til å tilpasse seg spesille utliggere eller edge caser. For min_samples_leaf skjer dette ved å spesifisere minimums antallet av verdier/hendelser som en bladnode kan inneholde og dermed kan du begrense muligheten til modellen å innehold bladnode med veldig få verdier. Vidre for min_samples_split så tunes modellen ved å sette en begrensning på antall verdier en node må innehold for å kunne splites, dette gjør dermed at du kan unngå oppdeling av noder som innehold få verdier [4].\n",
     "\n",
     "ref: \n",
-    "[4]: \"https://scikit-learn.org/stable/modules/generated/sklearn.tree.DecisionTreeClassifier.html\", lest 20.09.25"
+    "[4]: Scikit learn. (u.å). DecisionTreeClassifier. Hentet 20. september 2025 fra \"https://scikit-learn.org/stable/modules/generated/sklearn.tree.DecisionTreeClassifier.html\""
    ]
   },
   {
@@ -1671,7 +1671,7 @@
     "For tuning av GaussianNB er det kun et parameter som det er mulig å tune, dette er var_smoothing som er en parameter for å justere smoothing faktoren til modellen [5].\n",
     "\n",
     "ref:\n",
-    "[5] \"https://scikit-learn.org/stable/modules/generated/sklearn.naive_bayes.GaussianNB.html\", lest 20.09.25"
+    "[5] Scikit learn. (u.å). GaussianNB Hentet 20. september 2025 fra\"https://scikit-learn.org/stable/modules/generated/sklearn.naive_bayes.GaussianNB.html\""
    ]
   },
   {
