--- a/Oblig1/realestate.ipynb
+++ b/Oblig1/realestate.ipynb
@@ -902,7 +902,7 @@
     "r2_score gir oss et mål på hvor mye av variasjon i target variablen som kan forklarers av endringer i verdiene til features variablene i datasetet [2]. Hvis du har en r2_score på 1.0 har du perfekt korelasjon mellom features variablene og endringene i target variabelen, mens hvis du har en score på 0 så er den ingen korelasjon.\n",
     "\n",
     "ref:\n",
-    "[2] (metrics): \"https://scikit-learn.org/stable/modules/model_evaluation.html\", lest 20.09.25"
+    "[2]: Scikit learn (u.å). Metrics and scoring: quantifying the quality of predictions. Hentet 20. september 2025 fra \"https://scikit-learn.org/stable/modules/model_evaluation.html\""
    ]
   },
   {
@@ -1446,7 +1446,8 @@
     "\n",
     "I forhold til tuning parameter for denne modellen så er tol som i utgangspunktet er mulig å bruke. Dette er en instilling for tolleranse verdien for presisjonen til modellen [6].\n",
     "\n",
-    "[6] (tol): \"https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LinearRegression.html\", lest 21.09.25"
+    "ref:\n",
+    "[6]: Scikit learn. (u.å) LinearRegression. Hentet 21. september 2025 fra \"https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LinearRegression.html\""
    ]
   },
   {
