--- a/Oblig2/red.ipynb
+++ b/Oblig2/red.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "42d26518",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "16aac809",
    "metadata": {},
    "outputs": [
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "af036fc9",
    "metadata": {},
    "outputs": [
@@ -1014,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "13abfbc6",
    "metadata": {},
    "outputs": [
@@ -1049,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "459a31ab",
    "metadata": {},
    "outputs": [
@@ -1082,7 +1082,7 @@
     "    plt.grid(True)\n",
     "    plt.show()\n",
     "\n",
-    "optimise_k_means(df_features[[\"alcohol\", \"pH\"]], 10)"
+    "optimise_k_means(df_features[[0, 1]], 10)"
    ]
   },
   {
