--- a/Oblig2/white.ipynb
+++ b/Oblig2/white.ipynb
@@ -169,6 +169,40 @@
    "execution_count": null,
    "id": "044a2dc0",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "fixed acidity           0\n",
+       "volatile acidity        0\n",
+       "citric acid             0\n",
+       "residual sugar          0\n",
+       "chlorides               0\n",
+       "free sulfur dioxide     0\n",
+       "total sulfur dioxide    0\n",
+       "density                 0\n",
+       "pH                      0\n",
+       "sulphates               0\n",
+       "alcohol                 0\n",
+       "quality                 0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sjekk etter 0 verdier\n",
+    "data.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69dcaa4b",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
