--- a/Oblig2/red.ipynb
+++ b/Oblig2/red.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 149,
    "id": "42d26518",
    "metadata": {},
    "outputs": [],
@@ -11,15 +11,17 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "from sklearn.preprocessing import StandardScaler, MinMaxScaler\n",
+    "from sklearn.utils import resample\n",
     "from sklearn.cluster import KMeans, AgglomerativeClustering\n",
     "from sklearn.metrics import adjusted_rand_score, homogeneity_score, completeness_score, v_measure_score\n",
     "from sklearn.metrics import silhouette_score, davies_bouldin_score\n",
+    "from imblearn.over_sampling import SMOTENC\n",
     "import seaborn as sb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 172,
    "id": "7f1584dc",
    "metadata": {},
    "outputs": [],
@@ -75,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 173,
    "id": "6a077402",
    "metadata": {},
    "outputs": [],
@@ -112,7 +114,7 @@
     "        silhouette.append(results_internal[0])\n",
     "        davies.append(results_internal[1])\n",
     "\n",
-    "def validate_kmeans(classifier, runs, test=False, min_max=False, mean=False):\n",
+    "def validate_kmeans(df, classifier, runs, test=False, min_max=False, mean=False):\n",
     "    train_adjusted_rand, train_homogeneity, train_completeness, train_v_measure, train_silhouette, train_davies = [], [], [], [], [], []\n",
     "    validate_adjusted_rand, validate_homogeneity, validate_completeness, validate_v_measure, validate_silhouette, validate_davies = [], [], [], [], [], []\n",
     "    test_adjusted_rand, test_homogeneity, test_completeness, test_v_measure, test_silhouette, test_davies = [], [], [], [], [], []\n",
@@ -167,7 +169,7 @@
     "        print('Internal:')\n",
     "        internal_results_print(test_silhouette, test_davies)\n",
     "\n",
-    "def validate_agglomerative(classifier, min_max=False, mean=False):\n",
+    "def validate_agglomerative(df, classifier, min_max=False, mean=False):\n",
     "    adjusted_rand, homogeneity, completeness, v_measure, silhouette, davies = [], [], [], [], [], []\n",
     "    dataset = split_targets_and_features(df)\n",
     "\n",
@@ -208,7 +210,7 @@
     "        inertias.append(kmeans.inertia_)\n",
     "    fig = plt.subplots(figsize=(10,5))\n",
     "    plt.plot(means, inertias, \"o-\")\n",
-    "    plt.xlabel('Number og Cluser')\n",
+    "    plt.xlabel('Number of Clusters')\n",
     "    plt.ylabel('Inertia')\n",
     "    plt.grid(True)\n",
     "    plt.show()\n",
@@ -218,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 174,
    "id": "16aac809",
    "metadata": {},
    "outputs": [
@@ -348,7 +350,7 @@
        "[5 rows x 12 columns]"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,49 +361,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 129,
-   "id": "b3df81d0",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1599 entries, 0 to 1598\n",
-      "Data columns (total 12 columns):\n",
-      " #   Column                Non-Null Count  Dtype  \n",
-      "---  ------                --------------  -----  \n",
-      " 0   fixed acidity         1599 non-null   float64\n",
-      " 1   volatile acidity      1599 non-null   float64\n",
-      " 2   citric acid           1599 non-null   float64\n",
-      " 3   residual sugar        1599 non-null   float64\n",
-      " 4   chlorides             1599 non-null   float64\n",
-      " 5   free sulfur dioxide   1599 non-null   float64\n",
-      " 6   total sulfur dioxide  1599 non-null   float64\n",
-      " 7   density               1599 non-null   float64\n",
-      " 8   pH                    1599 non-null   float64\n",
-      " 9   sulphates             1599 non-null   float64\n",
-      " 10  alcohol               1599 non-null   float64\n",
-      " 11  quality               1599 non-null   int64  \n",
-      "dtypes: float64(11), int64(1)\n",
-      "memory usage: 150.0 KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "df.info()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "60f905e8",
    "metadata": {},
    "source": [
-    "Hensikten med datasettet er å muliggjøre analyse og modellering av vin kvalitet ut ifra forskjellige målte karaterestikker (features) som for eks. «fixed acidity», «citric acid» osv.\n",
-    "Datasettet innehold en target verdi kolonne, «quality». Kolonnen oppgir en vurdering av kvaliteten til vinen og skal være oppgitt i en int-verdi fra 1-10 [1].\n",
-    "Videre inneholder datasettet 11 kolonner med feature verdier som beskrive forskjellige målte kjemiske egenskaper vinen har. Alle disse kolonnen har et float verdiformat.\n",
+    "Hensikten med datasettet er å muliggjøre analyse og modellering av vin kvalitet ut ifra forskjellige målte kjemiske karaterestikker (features) som for eks. «fixed acidity», «citric acid», \"alcohol\" osv.\n",
+    "Datasettet inneholder en target kolonne, «quality». Kolonnen oppgir en vurdering av kvaliteten til en vin og skal være oppgitt med en int-verdi fra 1-10 [1].\n",
+    "Videre inneholder datasettet 11 kolonner med feature verdier som beskrive forskjellige målte kjemiske egenskaper den enkelte vinen har. Alle disse kolonnen har en verditype av float.\n",
     "\n",
     "ref [1]: UCI Irvine. (u.å). Wine Quality. Hentet 12.10.2025 fra \"https://archive.ics.uci.edu/dataset/186/wine+quality\""
    ]
@@ -440,6 +406,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "82d34b30",
+   "metadata": {},
+   "source": [
+    "Ut i fra seksjonen over så ser det ikke ut som datasettet inneholder noen manglende verdier."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 130,
    "id": "0c046a42",
@@ -462,20 +436,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e8dad27f",
+   "metadata": {},
+   "source": [
+    "Som vi ser ut i fra histogrammene i seksjonen over så ser datasette i hovedsak ser ut til å være normalfordel eller ensidig normalfordelt."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 135,
    "id": "1bc9b3c4",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<Axes: xlabel='quality'>"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "quality\n",
+      "5    681\n",
+      "6    638\n",
+      "7    199\n",
+      "4     53\n",
+      "8     18\n",
+      "3     10\n",
+      "Name: count, dtype: int64\n"
+     ]
     },
     {
      "data": {
@@ -489,16 +475,97 @@
     }
    ],
    "source": [
-    "df['quality'].value_counts().plot.bar()"
+    "df['quality'].value_counts().plot.bar()\n",
+    "print(df['quality'].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f40a5401",
+   "metadata": {},
+   "source": [
+    "Basert på dataene i seksjonen over så ser vi tydelig at datasette har en betydelig skjevfordeling i target verdiene og at det er en over representasjon for kvalitets verdier på 5 og 6, mens det er veldig få verdier registrert for 8 og 3. Dermed er det sansynlig at vi må vurdere noe behadling med upp eller down sampling, eventuelt begge."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee08c190",
+   "id": "5d41410e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(len(df.columns)-1):\n",
+    "    for j in range(i+1, len(df.columns)-1):\n",
+    "        x_label = df.columns[i]\n",
+    "        y_label = df.columns[j]\n",
+    "        sb.scatterplot(x=x_label, y=y_label, data=df, hue=df.quality)\n",
+    "        plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7031d1d",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d422918b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_3 = df[df['quality'] == 3]\n",
+    "df_4 = df[df['quality'] == 4].sample(25)\n",
+    "df_5 = df[df['quality'] == 5].sample(25)\n",
+    "df_6 = df[df['quality'] == 6].sample(25)\n",
+    "df_7 = df[df['quality'] == 7].sample(25)\n",
+    "df_8 = df[df['quality'] == 8]\n",
+    "\n",
+    "df_3 = resample(df_3, replace=True, n_samples=25)\n",
+    "#df_4 = resample(df_4, replace=True, n_samples=50)\n",
+    "df_8 = resample(df_8, replace=True, n_samples=25)\n",
+    "\n",
+    "\n",
+    "df_upp = pd.concat([df_3, df_4, df_5, df_6 , df_7, df_8])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8fbd37ff",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "id": "ee08c190",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "SMOTE-NC is not designed to work only with numerical features. It requires some categorical features.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[134]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m df_oversampled, _ = \u001b[43mSMOTENC\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mauto\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[43mfit_resample\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mquality\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\hallo\\AppData\\Local\\Python\\pythoncore-3.14-64\\Lib\\site-packages\\imblearn\\base.py:202\u001b[39m, in \u001b[36mBaseSampler.fit_resample\u001b[39m\u001b[34m(self, X, y, **params)\u001b[39m\n\u001b[32m    181\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mfit_resample\u001b[39m(\u001b[38;5;28mself\u001b[39m, X, y, **params):\n\u001b[32m    182\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"Resample the dataset.\u001b[39;00m\n\u001b[32m    183\u001b[39m \n\u001b[32m    184\u001b[39m \u001b[33;03m    Parameters\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m    200\u001b[39m \u001b[33;03m        The corresponding label of `X_resampled`.\u001b[39;00m\n\u001b[32m    201\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m202\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[43mfit_resample\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mparams\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\hallo\\AppData\\Local\\Python\\pythoncore-3.14-64\\Lib\\site-packages\\sklearn\\base.py:1365\u001b[39m, in \u001b[36m_fit_context.<locals>.decorator.<locals>.wrapper\u001b[39m\u001b[34m(estimator, *args, **kwargs)\u001b[39m\n\u001b[32m   1358\u001b[39m     estimator._validate_params()\n\u001b[32m   1360\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m config_context(\n\u001b[32m   1361\u001b[39m     skip_parameter_validation=(\n\u001b[32m   1362\u001b[39m         prefer_skip_nested_validation \u001b[38;5;129;01mor\u001b[39;00m global_skip_validation\n\u001b[32m   1363\u001b[39m     )\n\u001b[32m   1364\u001b[39m ):\n\u001b[32m-> \u001b[39m\u001b[32m1365\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfit_method\u001b[49m\u001b[43m(\u001b[49m\u001b[43mestimator\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\hallo\\AppData\\Local\\Python\\pythoncore-3.14-64\\Lib\\site-packages\\imblearn\\base.py:105\u001b[39m, in \u001b[36mSamplerMixin.fit_resample\u001b[39m\u001b[34m(self, X, y, **params)\u001b[39m\n\u001b[32m     99\u001b[39m X, y, binarize_y = \u001b[38;5;28mself\u001b[39m._check_X_y(X, y)\n\u001b[32m    101\u001b[39m \u001b[38;5;28mself\u001b[39m.sampling_strategy_ = check_sampling_strategy(\n\u001b[32m    102\u001b[39m     \u001b[38;5;28mself\u001b[39m.sampling_strategy, y, \u001b[38;5;28mself\u001b[39m._sampling_type\n\u001b[32m    103\u001b[39m )\n\u001b[32m--> \u001b[39m\u001b[32m105\u001b[39m output = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_fit_resample\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mparams\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    107\u001b[39m y_ = (\n\u001b[32m    108\u001b[39m     label_binarize(output[\u001b[32m1\u001b[39m], classes=np.unique(y)) \u001b[38;5;28;01mif\u001b[39;00m binarize_y \u001b[38;5;28;01melse\u001b[39;00m output[\u001b[32m1\u001b[39m]\n\u001b[32m    109\u001b[39m )\n\u001b[32m    111\u001b[39m X_, y_ = arrays_transformer.transform(output[\u001b[32m0\u001b[39m], y_)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\hallo\\AppData\\Local\\Python\\pythoncore-3.14-64\\Lib\\site-packages\\imblearn\\over_sampling\\_smote\\base.py:596\u001b[39m, in \u001b[36mSMOTENC._fit_resample\u001b[39m\u001b[34m(self, X, y)\u001b[39m\n\u001b[32m    594\u001b[39m \u001b[38;5;28mself\u001b[39m.n_features_ = _num_features(X)\n\u001b[32m    595\u001b[39m \u001b[38;5;28mself\u001b[39m._validate_column_types(X)\n\u001b[32m--> \u001b[39m\u001b[32m596\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_validate_estimator\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    598\u001b[39m X_continuous = _safe_indexing(X, \u001b[38;5;28mself\u001b[39m.continuous_features_, axis=\u001b[32m1\u001b[39m)\n\u001b[32m    599\u001b[39m X_continuous = check_array(X_continuous, accept_sparse=[\u001b[33m\"\u001b[39m\u001b[33mcsr\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mcsc\u001b[39m\u001b[33m\"\u001b[39m])\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\hallo\\AppData\\Local\\Python\\pythoncore-3.14-64\\Lib\\site-packages\\imblearn\\over_sampling\\_smote\\base.py:588\u001b[39m, in \u001b[36mSMOTENC._validate_estimator\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m    583\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[32m    584\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mSMOTE-NC is not designed to work only with categorical \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    585\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mfeatures. It requires some numerical features.\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    586\u001b[39m     )\n\u001b[32m    587\u001b[39m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.categorical_features_.size == \u001b[32m0\u001b[39m:\n\u001b[32m--> \u001b[39m\u001b[32m588\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[32m    589\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mSMOTE-NC is not designed to work only with numerical \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    590\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mfeatures. It requires some categorical features.\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    591\u001b[39m     )\n",
+      "\u001b[31mValueError\u001b[39m: SMOTE-NC is not designed to work only with numerical features. It requires some categorical features."
+     ]
+    }
+   ],
+   "source": [
+    "df_oversampled, _ = SMOTENC('auto').fit_resample(df, df['quality'])"
+   ]
   },
   {
    "cell_type": "code",
@@ -521,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": null,
    "id": "1b4fbd71",
    "metadata": {},
    "outputs": [
@@ -532,45 +599,42 @@
       "Traning ressults:\n",
       "**********************************\n",
       "External:\n",
-      "Adjusted rand score: 0.05 +- 0.01\n",
-      "Homogeneity score: 0.13 +- 0.01\n",
-      "Completness score: 0.08 +- 0.01\n",
-      "V-measure score: 0.10 +- 0.01\n",
+      "Adjusted rand score: 0.13 +- 0.02\n",
+      "Homogeneity score: 0.21 +- 0.03\n",
+      "Completness score: 0.23 +- 0.02\n",
+      "V-measure score: 0.22 +- 0.02\n",
       "**********************************\n",
       "Internal:\n",
-      "Silhouette score: 0.18 +- 0.02\n",
-      "Davies score: 1.65 +- 0.06\n",
+      "Silhouette score: 0.23 +- 0.01\n",
+      "Davies score: 1.36 +- 0.05\n",
       "\n",
       "Validation results:\n",
       "**********************************\n",
       "External:\n",
-      "Adjusted rand score: 0.05 +- 0.01\n",
-      "Homogeneity score: 0.14 +- 0.01\n",
-      "Completness score: 0.09 +- 0.01\n",
-      "V-measure score: 0.11 +- 0.01\n",
+      "Adjusted rand score: 0.09 +- 0.04\n",
+      "Homogeneity score: 0.20 +- 0.01\n",
+      "Completness score: 0.18 +- 0.01\n",
+      "V-measure score: 0.19 +- 0.01\n",
       "**********************************\n",
       "Internal:\n",
-      "Silhouette score: 0.16 +- 0.01\n",
-      "Davies score: 1.62 +- 0.09\n",
+      "Silhouette score: 0.19 +- 0.03\n",
+      "Davies score: 1.32 +- 0.09\n",
       "\n",
       "Test results:\n",
       "**********************************\n",
       "External:\n",
-      "Adjusted rand score: 0.06 +- 0.01\n",
-      "Homogeneity score: 0.15 +- 0.03\n",
-      "Completness score: 0.10 +- 0.02\n",
-      "V-measure score: 0.12 +- 0.02\n",
+      "Adjusted rand score: 0.08 +- 0.02\n",
+      "Homogeneity score: 0.19 +- 0.04\n",
+      "Completness score: 0.17 +- 0.03\n",
+      "V-measure score: 0.18 +- 0.03\n",
       "**********************************\n",
       "Internal:\n",
-      "Silhouette score: 0.17 +- 0.02\n",
-      "Davies score: 1.66 +- 0.08\n"
+      "Silhouette score: 0.18 +- 0.03\n",
+      "Davies score: 1.40 +- 0.10\n"
      ]
     }
    ],
-   "source": [
-    "kmeans = KMeans(n_clusters=7)\n",
-    "validate_kmeans(kmeans, 5, True, True, False)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
