--- a/Oblig2/red.ipynb
+++ b/Oblig2/red.ipynb
@@ -440,7 +440,7 @@
    "id": "e8dad27f",
    "metadata": {},
    "source": [
-    "Som vi ser ut i fra histogrammene i seksjonen over så ser datasette i hovedsak ser ut til å være normalfordel eller ensidig normalfordelt."
+    "Som vi ser ut i fra histogrammene i seksjonen over så ser datasettet i hovedsak ser ut til å være relativt normalfordelt eller ensidig normalfordelt. Det er imidlertid en betydelig forskjell i scaleringen til verdiene til de forskjellige featurene og det er dermed sansynelig at vi bør gjøre en vurdering i forhold scalering ved analysen av datasettet."
    ]
   },
   {
