--- a/Oblig2/red.ipynb
+++ b/Oblig2/red.ipynb
@@ -330,11 +330,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 201,
    "id": "7f1584dc",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# funksjon for splitting av dataset, og downsampling for balanser\n",
     "def split_dataset(data):\n",
     "    train_val = data.groupby(\"quality\", group_keys=False)[data.columns].sample(frac=0.8)\n",
     "    test = data.drop(train_val.index)\n",
@@ -386,11 +387,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": null,
    "id": "6a077402",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from matplotlib import axis\n",
+    "\n",
+    "\n",
     "def evaluate_model_external(true_labels, pred_labels):\n",
     "    adjusted_rand = adjusted_rand_score(true_labels, pred_labels)\n",
     "    homogeneity = homogeneity_score(true_labels, pred_labels)\n",
@@ -508,19 +512,21 @@
     "    print(\"Internal:\")\n",
     "    internal_results_print(silhouette, davies)\n",
     "\n",
-    "def optimise_k_means(data, max_cluster):\n",
-    "    means = []\n",
+    "def optimise_clusters(data, max_cluster):\n",
+    "    silhouette = []\n",
     "    inertias = []\n",
-    "    for c in range(1, max_cluster):\n",
-    "        kmeans = KMeans(n_clusters=c)\n",
+    "    n_clusters = range(2, max_cluster)\n",
+    "    for n in n_clusters:\n",
+    "        kmeans = KMeans(n_clusters=n)\n",
     "        kmeans.fit(data)\n",
     "\n",
-    "        means.append(c)\n",
     "        inertias.append(kmeans.inertia_)\n",
-    "    fig = plt.subplots(figsize=(10,5))\n",
-    "    plt.plot(means, inertias, \"o-\")\n",
+    "        silhouette.append(silhouette_score(data.drop(columns='quality', axis=1), kmeans.predict(data.drop(columns='quality', axis=1))))\n",
+    "    fig, ax = plt.subplots(1, 2, figsize=(10,5))\n",
+    "    ax[0].plot(n_clusters, inertias, \"o-\")\n",
+    "    ax[1].plot(n_clusters, silhouette, \"o-\")\n",
+    "    plt.title('Elbow plot')\n",
     "    plt.xlabel('Number of Clusters')\n",
-    "    plt.ylabel('Inertia')\n",
     "    plt.grid(True)\n",
     "    plt.show()\n",
     "\n",
@@ -656,7 +662,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": null,
+   "id": "93727328",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
    "id": "1820c7bd",
    "metadata": {},
    "outputs": [
@@ -667,20 +681,20 @@
       "Ressults:\n",
       "**********************************\n",
       "External:\n",
-      "Adjusted rand score: 0.08 +- 0.00\n",
-      "Homogeneity score: 0.14 +- 0.00\n",
-      "Completness score: 0.10 +- 0.00\n",
-      "V-measure score: 0.12 +- 0.00\n",
+      "Adjusted rand score: 0.06 +- 0.00\n",
+      "Homogeneity score: 0.09 +- 0.00\n",
+      "Completness score: 0.08 +- 0.00\n",
+      "V-measure score: 0.08 +- 0.00\n",
       "**********************************\n",
       "Internal:\n",
-      "Silhouette score: 0.14 +- 0.00\n",
-      "Davies score: 1.71 +- 0.00\n"
+      "Silhouette score: 0.15 +- 0.00\n",
+      "Davies score: 1.56 +- 0.00\n"
      ]
     }
    ],
    "source": [
     "agg = AgglomerativeClustering(n_clusters=5)\n",
-    "validate_agglomerative(agg, True, False)"
+    "validate_agglomerative(agg, False, True)"
    ]
   },
   {
