--- a/Oblig2/red.ipynb
+++ b/Oblig2/red.ipynb
@@ -657,7 +657,9 @@
     "\n",
     "    #funksjon for min_max normalisering av data\n",
     "    if(min_max):\n",
-    "        \n",
+    "        scaler_min_max =MinMaxScaler()\n",
+    "        scaler_min_max.fit(train[0])\n",
+    "        train[0] = pd.DataFrame(scaler_min_max.transform(train[0]), columns=train[0].columns)\n",
     "        validation[0] = pd.DataFrame(scaler_min_max.transform(validation[0]), columns=validation[0].columns)\n",
     "        test[0] = pd.DataFrame(scaler_min_max.transform(test[0]), columns=test[0].columns)    \n",
     "    \n",
