--- a/Oblig2/red.ipynb
+++ b/Oblig2/red.ipynb
@@ -626,23 +626,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "7f1584dc",
    "metadata": {},
    "outputs": [],
    "source": [
     "# funksjon for splitting av dataset, og downsampling for balanser\n",
-    "def split_dataset(data):\n",
-    "    train_val = data.groupby(\"quality\", group_keys=False)[data.columns].sample(frac=0.8)\n",
+    "def split_dataset(data, down_s=0):    \n",
+    "    \n",
+    "    if(down_s > 0): data = downsampling(data, down_s)\n",
+    "\n",
+    "    train_val = data.groupby(\"quality\", observed=False, group_keys=False)[data.columns].sample(frac=0.8)\n",
     "    test = data.drop(train_val.index)\n",
-    "    train = train_val.groupby(\"quality\", group_keys=False)[train_val.columns].sample(frac=0.75)\n",
-    "    validation = train_val.drop(train.index)    \n",
+    "    train = train_val.groupby(\"quality\", observed=False, group_keys=False)[train_val.columns].sample(frac=0.75)\n",
+    "    validation = train_val.drop(train.index)\n",
+    "        \n",
     "    return [train, validation, test]\n",
     "\n",
     "def check_split_dataset(data):\n",
     "    print(data[0][\"quality\"].value_counts()/data[0].shape[0])\n",
     "    print(data[1][\"quality\"].value_counts()/data[1].shape[0])\n",
     "    print(data[2][\"quality\"].value_counts()/data[2].shape[0])\n",
+    "\n",
+    "def downsampling(data, n):\n",
+    "    df_3 = df[df['quality'] == 3]\n",
+    "    if(df_3['quality'].count() > n): df_3 = df_3.sample(n)\n",
+    "\n",
+    "    df_4 = df[df['quality'] == 4]\n",
+    "    if(df_4['quality'].count() > n): df_4 = df_4.sample(n)\n",
+    "\n",
+    "    df_5 = df[df['quality'] == 5]\n",
+    "    if(df_5['quality'].count() > n): df_5 = df_5.sample(n)\n",
+    "\n",
+    "    df_6 = df[df['quality'] == 6]\n",
+    "    if(df_6['quality'].count() > n): df_6 = df_6.sample(n)\n",
+    "\n",
+    "    df_7 = df[df['quality'] == 7]\n",
+    "    if(df_7['quality'].count() > n): df_7 = df_7.sample(n)\n",
+    "\n",
+    "    df_8 = df[df['quality'] == 8]\n",
+    "    if(df_8['quality'].count() > n): df_8 = df_8.sample(n)\n",
+    "    \n",
+    "    df_down = pd.concat([df_3, df_4, df_5, df_6 , df_7, df_8])\n",
+    "\n",
+    "    return df_down\n",
     "\n",
     "def split_targets_and_features(data):\n",
     "    targets = data.quality\n",
@@ -876,30 +903,36 @@
    "execution_count": null,
    "id": "d7031d1d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<bound method Series.count of 1299    3\n",
+      "899     3\n",
+      "832     3\n",
+      "690     3\n",
+      "1505    3\n",
+      "       ..\n",
+      "440     8\n",
+      "1403    8\n",
+      "455     8\n",
+      "588     8\n",
+      "267     8\n",
+      "Name: quality, Length: 136, dtype: category\n",
+      "Categories (6, int64): [3, 4, 5, 6, 7, 8]>\n"
+     ]
+    }
+   ],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "d422918b",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df_3 = df[df['quality'] == 3]\n",
-    "df_4 = df[df['quality'] == 4].sample(25)\n",
-    "df_5 = df[df['quality'] == 5].sample(25)\n",
-    "df_6 = df[df['quality'] == 6].sample(25)\n",
-    "df_7 = df[df['quality'] == 7].sample(25)\n",
-    "df_8 = df[df['quality'] == 8]\n",
-    "\n",
-    "df_3 = resample(df_3, replace=True, n_samples=25)\n",
-    "#df_4 = resample(df_4, replace=True, n_samples=50)\n",
-    "df_8 = resample(df_8, replace=True, n_samples=25)\n",
-    "\n",
-    "\n",
-    "df_upp = pd.concat([df_3, df_4, df_5, df_6 , df_7, df_8])"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
